# LearningToExecute

./: .gitignore  CMakeLists.txt  README.md  config.xml  useful_references.txt
include/: BaselineStrategy.h  ConfigurationHandler.h  Generator.h  ILearningStrategy.h  Network.h  SymbolManager.h  VariableManager.h
src/: ConfigurationHandler.cpp  Generator.cpp  Network.cpp  SymbolManager.cpp  VariableManager.cpp  main.cpp
